--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -13,16 +13,25 @@ $link-color: rgba(21, 21, 21, 0.64);
 body {
   background-color: $bg-color;
   font-family: 'Heebo', sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.05rem;
 }
 
 .content_div {
   z-index: 1;
-  margin: auto 2rem;
+  margin: 1rem;
   padding: 0;
   img {
     max-width: 95%;
     object-fit: contain;
+  }
+}
+
+.listaus_ul {
+  list-style-position: outside;
+  padding-left: 20px;
+
+  li {
+    padding-bottom: 8px;
   }
 }
 
@@ -43,7 +52,7 @@ body {
   }
 
   a:hover {
-    text-shadow: 1px 1px 1px $link-color;
+    text-shadow: 1px 1px 1px rgba(101, 98, 100, 0.7);
   }
 
 }
@@ -87,6 +96,7 @@ body {
     /*ISO EHKÄ */
     min-width: 944px;
     max-width: calc(1300px - 3rem);
+    box-shadow:  0px 5px 50px 15px #7c8b88;
   }
 
   .datespan {
