--- a/templates/all_naytelmat.html
+++ b/templates/all_naytelmat.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="content_div">
+    <ul class="listaus_ul">
     {% for naytelma in naytelmat %}
-        <a href={% url 'naytelmat' naytelma_pk=naytelma.pk %}>{{ naytelma.nimi }}</a> {{ naytelma.naytos_alku }} - {{ naytelma.naytos_loppu }}
+        <li><a href={% url 'naytelmat' naytelma_pk=naytelma.pk %}>{{ naytelma.nimi }}</a><br>
+            {{ naytelma.naytos_alku }} - {{ naytelma.naytos_loppu }}</li>
     {% endfor %}
+    </ul>
     </div>
 {% endblock %}
