--- a/static/css/_tinymce.scss
+++ b/static/css/_tinymce.scss
@@ -2,6 +2,7 @@
   max-width: 100vw;
   margin: 0px;
   padding: 0px;
+  word-wrap: break-word;
   img {
     max-width: 100%;
   }
@@ -58,9 +59,19 @@
   }
 
   table {
-    width: 100%;
-    max-width: 100%;
+    max-width: 100% !important;
     border-collapse: collapse;
+    table-layout: fixed !important;
+    border: 1px solid $image-border-color;
+    border-radius: 25px;
+    //width: 100% !important;
+    td, th {
+      border: 1px solid $image-border-color;
+      //font-size: 0.85rem;
+      white-space: normal;
+      word-break: break-all !important;
+    }
   }
+
 }
 
