--- a/static/css/_images.scss
+++ b/static/css/_images.scss
@@ -186,5 +186,10 @@ $margin-size: 25px;
     max-height: 80vh;
     object-fit:contain;
   }
+
+  h3 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
