--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -17,7 +17,7 @@
         <div class="nav_button_div">
             <a href="#" id="navbutton">☰</a>
         </div>
-        <div class="nav_links_container">
+        <div class="nav_links_container" id="navlinkcont">
             <div class="link_div"><a href="#" id="ajankohtaista_a">Ajankohtaista</a>
                 <div class="inner_link_container" id="ajankohtaista_div">
                     <!-- get links for 5 latest ajankohtaista objects with includetag -->
