--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -20,6 +20,58 @@ body {
   z-index: 1;
   margin: 1rem;
   padding: 0;
+
+  p{
+    margin: 0;
+    padding: 0;
+    font-size: 1.05rem;
+    font-family: 'Heebo', sans-serif;
+  }
+
+  h1 {
+    font-size: 2rem;
+    font-family: 'Heebo', sans-serif;
+    padding: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h2 {
+    font-size: 1.75rem;
+    font-family: 'Heebo', sans-serif;
+    padding: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-family: 'Heebo', sans-serif;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+    font-family: 'Heebo', sans-serif;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h5 {
+    font-size: 1rem;
+    font-family: 'Heebo', sans-serif;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  h6 {
+    font-size: 0.75rem;
+    font-family: 'Heebo', sans-serif;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
   img {
     max-width: 95%;
     object-fit: contain;
